Package JavaFX viewport prototype as named module